syntax = "proto3";
package pryzm.icstaking;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "pryzm/icstaking/host_chain.proto";
import "pryzm/icstaking/params.proto";
import "pryzm/icstaking/undelegation.proto";

option go_package = "github.com/pryzm-finance/pryzm-core/x/icstaking/types";

message EventSetHostChain {
  HostChain host_chain = 1 [(gogoproto.nullable) = false];
}

message EventSetHostChainState {
  HostChainState host_chain_state = 1 [(gogoproto.nullable) = false];
}

message EventSetParams {
  Params params = 1 [(gogoproto.nullable) = false];
}

message EventSetUndelegation {
  Undelegation undelegation = 1 [(gogoproto.nullable) = false];
}

message EventSetChannelUndelegation {
  ChannelUndelegation channel_undelegation = 1 [(gogoproto.nullable) = false];
}

message EventStake {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string host_chain = 2;
  string transfer_channel = 3;
  string amount = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin fee = 5 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin c_amount = 6 [(gogoproto.nullable) = false];
}

message EventUnstake {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string host_chain = 2;
  string transfer_channel = 3;
  string c_amount = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin u_amount = 5 [(gogoproto.nullable) = false];
}

message EventRedeemUnstaked {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string host_chain = 2;
  string transfer_channel = 3;
  uint64 epoch = 4;
  string u_amount = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin amount = 6 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin fee = 7 [(gogoproto.nullable) = false];
}

message EventInstantUnstake {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string host_chain = 2;
  string transfer_channel = 3;
  string min_c_amount = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string max_c_amount = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin amount = 6 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin fee = 7 [(gogoproto.nullable) = false];
}
